@@ -5,6 +5,7 @@
 <batteries_core_threads.*>:  pkg_threads
 <extlib.cmx>:            for-pack(Batteries_core_pack)
 <batteries_core.cmx>:    for-pack(Batteries_core_pack)
+<batteries_core_threads.cmx>:    for-pack(Batteries_core_threads_pack)
 <toolchain.cmx>:         for-pack(Batteries_core_pack)
 <toolchain.*>:           use_camlp4,use_camlp4_full
 <toolchain.mli>:         pkg_sexplib
